# FindIdxOfMinimum

./: CMakeLists.txt  LICENSE  Readme.md  bench_dispatch.cxx  buildBench.sh  buildGoogleBenchmark.sh  buildTest.sh  example.sh  findIndexOfMinimum.h  findIndexOfMinimum_bench.cxx  findIndexOfMinimum_test.cxx  findMinimumIndex.h  findMinimumIndex_bench.cxx  findMinimumIndex_test.cxx  findMinumumIndex2_bench.cxx  findMinumumIndex_bench.cxx  findMinumumIndex_test.cxx  run.sh  test_dispatch.cxx  vec.h
KL/: AlignedDynArray.h  AlignedDynArray.icc  KLGaussianMixtureReduction.cxx  KLGaussianMixtureReduction.cxx_old  KLGaussianMixtureReduction.h  test  test.sh  testMergeComponents.cxx
